# SysUpdater

./: Cargo.toml  LICENSE  README-DE.md  README-ES.md  README-FR.md  README-UK.md  README-ZH.md  README.md
.github/workflows/: rust.yml
src/: main.rs
